--- a/pants.toml
+++ b/pants.toml
@@ -6,6 +6,7 @@ print_stacktrace = true # You'll want this enabled - trust me
 backend_packages = [
     "pants.backend.plugin_development", # Adds the `pants_requirements` target type
     "pants.backend.python",
+    "experimental.fooify",
 ]
 
 [anonymous-telemetry]
