- Filled in a rule to copy/rename the wheel input - Re-named the target to not conflict with the subsystem

--- a/helloworld/BUILD
+++ b/helloworld/BUILD
@@ -12,7 +12,7 @@ python_distribution(
     ),
 )
 
-fooify(
+fooify_distribution(
     name="helloworld-foo",
     dependencies=[":helloworld-dist"],
 )
